--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container header-container shadow p-3 mb-5 bg-white rounded">
-            <img src="WhatsApp Image 2025-03-19 at 9.07.07 PM.jpeg" alt="Gunavathi" class="profile-pic">
+            <img src="image.jpeg" alt="Gunavathi" class="profile-pic">
             <div class="header-text">
                 <h1>Gunavathi V</h1>
                 <p>UI/UX DESIGNER</p>
